--- a/index.html
+++ b/index.html
@@ -36,35 +36,35 @@ html>
         <div  class="text-white text-center bg-success">
             <h2>Top</h2>
             <p>Price: $30</p>
-        <img src="C:\Users\kunde\OneDrive\Desktop\shopping\imgtop.jpg"><height='50px'></height><width='50px'></width>
+        <img src="imgtop.jpg"><height='50px'></height><width='50px'></width>
             <button class="add-to-cart" onclick="addToCart('Top', 30)">Add to Cart</button>
         </div>
 
         <div class="text-bg-primary text-center">
             <h2>Kurti</h2>
             <p>Price: $50</p>
-            <img src ="C:\Users\kunde\OneDrive\Desktop\shopping\image2k.jpg"><height='50px'></height><width='50px'></width>
+            <img src ="image2k.jpg"><height='50px'></height><width='50px'></width>
             <button class="add-to-cart" onclick="addToCart('Kurti', 50)">Add to Cart</button>
         </div>
     	</div>
         <div class="text-bg-warning text-center">
             <h2>Jeans</h2>
             <p>Price: $40</p>
-            <img src="C:\Users\kunde\OneDrive\Desktop\shopping\image3.jpg"><height='50px'></height><width='50px'></width>
+            <img src="image3.jpg"><height='50px'></height><width='50px'></width>
             <button class="add-to-cart" onclick="addToCart('Jeans', 40)">Add to Cart</button>
         </div>
     	</div>
         <div class="text-bg-secondary text-center">
             <h2>Lehenga</h2>
             <p>Price: $150</p>
-            <img src="C:\Users\kunde\OneDrive\Desktop\shopping\img4.jpg"><height='50px'></height><width='50px'></width>
+            <img src="img4.jpg"><height='50px'></height><width='50px'></width>
             <button class="add-to-cart" onclick="addToCart('Lehenga', 150)">Add to Cart</button>
         </div>
     	</div>
         <div class="text-bg-danger text-center">
             <h2>Saree</h2>
             <p>Price: $100</p>
-            <img src="C:\Users\kunde\OneDrive\Desktop\shopping\imgsaree.jpg"><height='50px'></height><width='50px'></width>
+            <img src="imgsaree.jpg"><height='50px'></height><width='50px'></width>
             <button class="add-to-cart" onclick="addToCart('Saree', 100)">Add to Cart</button>
         </div>
     	</div>
